Music Player Component Bugfixing and Optimization [Feat] Add 'Jump to Title Letter' feature with letter highlighting [Fix] Resolve messy sorting in Music Menu and index, which now take into account of the metadata title [Ref] Separate Music Menu Player controls to a different file [UI] Change Google Login button styling

--- a/src/index.css
+++ b/src/index.css
@@ -69,23 +69,6 @@ body {
   border-radius: 1.5rem;
 }
 
-.custom-scrollbar::-webkit-scrollbar {
-  width: 8px;
-}
-
-.custom-scrollbar::-webkit-scrollbar-track {
-  border-radius: 10px;
-}
-
-.custom-scrollbar::-webkit-scrollbar-thumb {
-  background: rgba(255, 255, 255, 0.3);
-  border-radius: 10px;
-}
-
-.custom-scrollbar::-webkit-scrollbar-thumb:hover {
-  background: rgba(255, 255, 255, 0.5);
-}
-
 @keyframes spin {
   to {
     transform: rotate(360deg);
@@ -119,8 +102,12 @@ button:focus:not(:focus-visible) {
 }
 
 button:focus-visible {
-  outline: 1px solid #d6aaff; /* Keep focus styles for keyboard navigation if desired */
+  outline: 1px solid #55ddff; /* Keep focus styles for keyboard navigation if desired */
 }
+
+/* .music-list button:focus-visible {
+  outline: none;
+} */
 
 .truncate-notes {
   display: -webkit-box;
@@ -148,25 +135,6 @@ input[type="time"]::-webkit-calendar-picker-indicator {
 /* Firefox specific styles */
 input[type="time"]::-moz-calendar-picker-indicator {
   cursor: pointer;
-}
-
-.custom-scrollbar::-webkit-scrollbar {
-  width: 8px;
-}
-
-.custom-scrollbar::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-.custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: rgba(255, 255, 255, 0.3);
-  border-radius: 4px;
-  border: 2px solid transparent;
-  background-clip: content-box;
-}
-
-.custom-scrollbar::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(255, 255, 255, 0.5);
 }
 
 ::-webkit-scrollbar {
